--- a/core/pages/auth/profile/html/index.html
+++ b/core/pages/auth/profile/html/index.html
@@ -160,7 +160,7 @@
 {% include 'core/html/includes/core/javascripts.html' %}
 {% include 'core/html/includes/form/javascripts.html' %}
 <!-- ------------------- -->
-<script>const api = axios.create({ baseURL: '{{prefix_url_post}}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
+<script>const api = axios.create({ baseURL: '{{prefix_url_post}}', timeout: 2000, withCredentials: true });</script>
 <script src="{{prefix_url_js}}/ganti_password.js"></script>
 <script src="{{prefix_url_js}}/setting.js"></script>
 {% endblock javascripts %}
