--- a/core/pages/setting/privilege/html/index.html
+++ b/core/pages/setting/privilege/html/index.html
@@ -66,7 +66,7 @@
 {% include 'core/html/includes/core/javascripts.html' %}
 {% include 'core/html/includes/index/javascripts.html' %}
 <!-- ------------------- -->
-<script>const api = axios.create({ baseURL: '{{prefix_url_post}}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
+<script>const api = axios.create({ baseURL: '{{prefix_url_post}}', timeout: 2000, withCredentials: true });</script>
 <script src="{{prefix_url_js}}/index.js"></script>
 
 {% endblock javascripts %}
