--- a/core/pages/system/menu/html/menutype/form.html
+++ b/core/pages/system/menu/html/menutype/form.html
@@ -79,7 +79,7 @@
 {% include 'core/html/includes/core/javascripts.html' %}
 {% include 'core/html/includes/form/javascripts.html' %}
 <!-- ------------------- -->
-<script>const api = axios.create({ baseURL: '{{prefix_url_post}}{% if data_menutype %}/{{data_menutype.id}}{% endif %}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
+<script>const api = axios.create({ baseURL: '{{prefix_url_post}}{% if data_menutype %}/{{data_menutype.id}}{% endif %}', timeout: 2000, withCredentials: true });</script>
 <script src="{{prefix_url_js}}/form.js"></script>
 
 {% endblock javascripts %}
