--- a/core/pages/system/session/html/index.html
+++ b/core/pages/system/session/html/index.html
@@ -51,7 +51,10 @@
                                     <table id="table_session" class="table table-bordered table-striped">
                                     </table>
                                 </div>
-                                <div class="tab-pane fade" id="nav-client" role="tabpanel" aria-labelledby="nav-client-tab" tabindex="0">...</div>
+                                <div class="tab-pane fade" id="nav-client" role="tabpanel" aria-labelledby="nav-client-tab" tabindex="0">
+                                    <table id="table_client" class="table table-bordered table-striped">
+                                    </table>
+                                </div>
                             </div>
                             <!-- /.card-body -->
                         </div>
@@ -78,6 +81,7 @@
 
 <!-- ------------------- -->
 <script>const api = axios.create({ baseURL: '{{prefix_url_post}}', timeout: 2000, withCredentials: true });</script>
-<script src="{{prefix_url_js}}/index.js"></script>
+<script src="{{prefix_url_js}}/session.js"></script>
+<script src="{{prefix_url_js}}/client.js"></script>
 
 {% endblock javascripts %}
