feat : timeout durasi cookies

--- a/core/pages/system/coresetting/html/index.html
+++ b/core/pages/system/coresetting/html/index.html
@@ -131,6 +131,10 @@
                                     <label for="refresh_exp" class="form-label">Refresh Expired</label>
                                     <input type="number" class="form-control" name="refresh_exp" value="{{data_authsystem.refresh_exp}}" required>
                                 </div>
+                                <div class="mb-3">
+                                    <label for="timeout_exp" class="form-label">TimeOut Expired</label>
+                                    <input type="number" class="form-control" name="timeout_exp" value="{{data_authsystem.timeout_exp}}" required>
+                                </div>
                                 <div class="mb-3 mt-5 float-end">
                                     <button type="submit" class="btn btn-primary">SIMPAN</button>
                                 </div>
