feat : loggedin & message logs

--- a/core/pages/auth/register/html/register.html
+++ b/core/pages/auth/register/html/register.html
@@ -103,7 +103,7 @@
         </div>
       </form>
       <br />
-      <a href="/auth/login" class="text-center">Saya mempunyai Akun Login</a>
+      <a href="/auth/loggedin" class="text-center">Saya mempunyai Akun Login</a>
     </div>
     <!-- /.form-box -->
   </div><!-- /.card -->
