feat : SSO system

--- a/core/pages/auth/loggedin/html/index.html
+++ b/core/pages/auth/loggedin/html/index.html
@@ -103,6 +103,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script> setTimeout(function () { window.location.href = "/auth/timeout/formlogin" }, 30 * 60 * 1000);</script>
-<script src="{{prefix_url_js}}.js?next={{nextpage}}"></script>
+<script src="{{prefix_url_js}}.js?redirect_uri={{redirect_uri}}"></script>
 
 {% endblock javascripts %}
