--- a/core/pages/auth/password/html/index.html
+++ b/core/pages/auth/password/html/index.html
@@ -26,54 +26,31 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to start your session</p>
+      <p class="login-box-msg">Lupa kata sandi? </p>
 
-      <form id="formLogin" autocomplete="off">
-        <div class="mb-3">
-          <div class="input-group">
-            <input name="email" type="email" class="form-control" placeholder="Email">
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-envelope"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3">
-          <div class="input-group">
-            <input name="password" type="password" class="form-control" placeholder="Password">
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-lock"></span>
-              </div>
+
+      <form id="form_" autocomplete="off">
+        <div class="input-group mb-3">
+          <input type="email" id="email" name="email" class="form-control" placeholder="Email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-8">
-            <!-- <div class="icheck-primary">
-              <input type="checkbox" id="remember">
-              <label for="remember">
-                Remember Me
-              </label>
-            </div> -->
-          </div>
-          <!-- /.col -->
-          <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary btn-block">Minta Password Baru</button>
           </div>
           <!-- /.col -->
         </div>
+
       </form>
 
-      {% if register_account %}
-      <p class="mb-0">
-        <a href="/auth/register" class="text-center">Pendaftaran Akun Baru</a>
-      </p>
-      {% endif %}
-      <p class="mb-0">
-        <a href="/auth/forget_password" class="text-center">Lupa Password</a>
-      </p>
+
+      <!-- <p class="mb-1">
+        <a href="example-recover-password.html">I forgot my password</a>
+      </p> -->
     </div>
     <!-- /.login-card-body -->
   </div>
@@ -96,6 +73,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script> setTimeout(function () { window.location.href = "/auth/timeout/formlogin" }, 30 * 60 * 1000);</script>
-<script src="{{prefix_url_js}}.js{% if clientsso_id!='-' %}?client_id={{clientsso_id}}{% endif %}"></script>
+<script src="{{prefix_url_js}}/index.js{% if clientsso_id!='-' %}?client_id={{clientsso_id}}{% endif %}"></script>
 
 {% endblock javascripts %}
