--- a/core/pages/setting/akun/html/form.html
+++ b/core/pages/setting/akun/html/form.html
@@ -38,7 +38,13 @@
             <div class="row">
                 <div class="col-12">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header p-1">
+                            <button class="navbar-toggler dropdown-toggle float-end" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="fas fa-bars"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Kirim Link Reset Password</a></li>
+                            </ul>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
