--- a/core/pages/setting/akun/html/form.html
+++ b/core/pages/setting/akun/html/form.html
@@ -43,7 +43,7 @@
                                 <span class="fas fa-bars"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Kirim Link Reset Password</a></li>
+                                <li><a class="dropdown-item" id="reset_password" href="#">Kirim Link Reset Password</a></li>
                             </ul>
                         </div>
                         <!-- /.card-header -->
